SERVER-34948 Add whitespace to No electable secondaries error